--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,8 @@ ul li {
 .history-inner-card-left {
     display: flex;
     flex-direction: column;
-    align-items: flex-end
+    align-items: flex-end;
+    margin-left: 10px;
 }
 
 .history-inner-card__title {
@@ -418,12 +419,10 @@ ul li {
     color: #7f8c8d;
 }
 
-.menuToggle {
-    padding: 10px 15px;
-    cursor: pointer;
-    color: #fff;
-    display: none;
-}
+
+
+/*--------------------------------*/
+
 
 #menuToggle {
     display: none;
@@ -441,6 +440,7 @@ nav label {
     display: none;
     margin-right: 30px;
     font-size: 25px;
+    z-index: 9999999;
 }
 
 /*------------------MEDIA------------------------*/
@@ -452,78 +452,91 @@ nav label {
         padding-left: 20px;
         padding-right: 20px;
     }
-
+    .menu {
+        width: 600px;
+    }
     .center-bar {
         width: 680px;
         margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .container {
+        width: 880px;
+    }
+    .menu {
+        width: 500px;
+    }
+    .center-bar {
+        width: 580px;
     }
 }
 
 @media (max-width: 980px) {
     .container {
         width: 680px;
-        position: relative;
-        margin: 0 auto;
-        padding-left: 20px;
-        padding-right: 20px;
     }
     .center-bar {
         width: 100%;
-        margin-bottom: 50px;
     }
     .right-bar {
         display: none;
     }
-
     nav label{
         display: block;
     }
     nav input{
         display: block;
     }
-
-    #menuToggle:checked ~ .menu{
+    .menu{
         display: block;
         position: absolute;
-        top: 70px;
-        left: 0;
+        top: -210px;
+        margin: 0;
         background: #ecf0f1;
-        width: 200px;
-        margin-left: -30px;
-        padding-left: 28px;
+        width: 100%;
         z-index: 9999;
+        transition: top 0.3s;
     }
     .menu li{
         border-top: 1px solid #7f8c8d;
         padding: 10px;
     }
-    .menu{
-        display: none;
+    .menu li:last-child {
+        border-bottom: 1px solid #7f8c8d;
     }
-    
+    #menuToggle:checked ~ .menu {
+        top: 70px;
+    }
     .show {
         display: block;
     }
-    
 }
 
 @media (max-width: 724px) {
     .container {
         width: 520px;
-        position: relative;
-        margin: 0 auto;
-        padding-left: 20px;
-        padding-right: 20px;
     }
 }
 
 @media (max-width: 580px) {
     .container {
-        width: 280px;
-        position: relative;
-        margin: 0 auto;
+        width: 95%;
+        padding: 0;
+    }
+    .logo b {
+        display: none;
+    }
+    .history {
+        width: 100%;
+        margin: 0;
+    }
+    .card {
+        width: 100%;
+    }
+    .bonus-program {
         padding-left: 20px;
-        padding-right: 20px;
     }
 }
 
